// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SVG interface when hidden should match snapshot 1`] = `
<div
  className="heatmap-svg__wrapper"
  style={
    Object {
      "transform": "translate(100px)",
    }
  }
/>
`;

exports[`SVG interface when visible should match snapshot 1`] = `
<div
  className="heatmap-svg__wrapper"
  style={
    Object {
      "transform": "translate(100px)",
    }
  }
>
  <StoreConnection
    other="otherProp"
    renderProp={[Function]}
  />
</div>
`;
